3.0.12
Error in retry method in Get-BcArtifactUrl (3.0.11)
Fixed array parsing in Get-BcContainerAppInfo
Added ContainerHelper config UseOldFormatForGetBcContainerAppInfo with which you can force Get-BcContainerAppInfo to return values in old format (Sorry Kamil)
Issue #2573 improve error message when restoring database on host

3.0.11
Issue #2378 When running BcContainerHelper without admin rights, the import of a certificate is now done in an elevated process (asking for permissions)
New function Invoke-gh for invoking GitHub CLI commands from PowerShell
New function Invoke-git for invoking Git commands from PowerShell
Display warning if DisabledTests contains codeunit with a comma in the name (not supported for disabling tests)
Issue #2533 Import-BcContainerLicenseFile doesn't support secure URL's with query parameters
Issue #2522 Invoke-ScriptInBCContainer with usePsSession False and a Function as Value for the Scriptblock Param fails
Add support for running BcContainerHelper inside a container, forcing the use of Volumes for sharing between host and containers
Run-AlPipeline will not use UpdateHosts when running inside a container
Establishing sessions from inside a container to another container is done using a username based PS Session
Do not use KillPsSession when running inside a container
Issue #2518 support Onedrive URLs in Sign-BcContainerApp
Issue #2540 add support for missing countries in mapping
Issue #2534 add runSandboxAsOnPrem to New-BcImage (and transfer from New-BcContainer)
Issue #2486 add resilience to Get-BcArtifactUrl
Add WarningPreference to config and Invoke-ScriptInBCContainer
CI/CD moved from Azure DevOps to GitHub Actions

3.0.10
Issue #2457 Convert-BcAppsToRuntimePackages: allow to set showmycode, keepContainer, include sign app parameters

3.0.9
Issue #2423 Export-ModifiedObjectsAsDeltas fails with Could not find a part of the path.