@@ -49,7 +49,7 @@ try {
     }
     $containerBakFolder = Get-BcContainerPath -containerName $containerName -path $bakFolder -throw
 
-    Invoke-ScriptInBcContainer -containerName $containerName -ScriptBlock { Param($bakFolder, $tenant, $databasecredential, $compress)
+    Invoke-ScriptInBcContainer -containerName $containerName -ScriptBlock { Param($containerBakfolder, $bakFolder, $tenant, $databasecredential, $compress)
        
         function Backup {
             Param (
@@ -83,6 +83,10 @@ try {
             $databaseServerInstance = "$databaseServer\$databaseInstance"
         }
 
+        if ($databaseServer -eq "localhost") {
+            $bakFolder = $containerBakFolder
+        }
+
         if (!(Test-Path $bakFolder)) {
             New-Item $bakFolder -ItemType Directory | Out-Null
         }
@@ -111,7 +115,7 @@ try {
         } else {
             Backup -ServerInstance $databaseServerInstance -database $DatabaseName -bakFolder $bakFolder -bakName "database" -databasecredential $databasecredential -compress:$compress
         }
-    } -ArgumentList $containerbakFolder, $tenant, $databasecredential, $compress
+    } -ArgumentList $containerbakFolder, $bakFolder, $tenant, $databasecredential, $compress
 }
 catch {
     TrackException -telemetryScope $telemetryScope -errorRecord $_
